querying based on autocompleted involvement works.  the problem is that the search results thing has CSS issues, owing to the mangling of classes in the shadow tree to have their own namespacing.  tried to quickly cram the css down in so it might be all magic, but the naive approach obviously fell down.  (it's possible the rules are spanning the shadow tree firewall or they just aren't getting contributed to the global concept of them, and/or the application mechanism is just something odd that I need to look into.)

--- a/client/bindings.css
+++ b/client/bindings.css
@@ -6,6 +6,10 @@
   binding: url("bubbles.xml#constraint-list");
 }
 
+#query {
+  binding: url("messages.xml#query");
+}
+
 .message {
   binding: url("messages.xml#message");
 }
